force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Result__c</fullName>
    <defaultValue>&apos;Under Evaluation&apos;</defaultValue>
    <label>Inspection Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Aprovado com Restrições</fullName>
                <label>Approved with Restrictions</label>
            </value>
            <value>
                <fullName>Reprovado</fullName>
                <label>Reproved</label>
            </value>
            <value>
                <fullName>Reprovado/Resolvido</fullName>
                <label>Reproved/Solved</label>
            </value>
            <value>
                <fullName>Awaiting Return</fullName>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>