force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Inspector_CREA__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspector_CREA__c</fullName>
    <label>Inspector CREA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>