force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspector_Name__c</fullName>
    <label>Inspector Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>