force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>TW1_Invoice_Item__c</fullName>
    <label>Invoice Item</label>
    <length>40</length>
    <type>Text</type>
</CustomField>