force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Legal_Clarification__c.field-meta.xml
<CustomField>
    <fullName>TW1_Legal_Clarification__c</fullName>
    <label>Legal Clarification</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>