force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Location__c.field-meta.xml
<CustomField>
    <fullName>TW1_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>