force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Location_Base__c.field-meta.xml
<CustomField>
    <fullName>TW1_Location_Base__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Macaé</fullName>
            </value>
            <value>
                <fullName>Base São Cristovão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>