force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Main_Deviation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Main_Deviation__c</fullName>
    <label>Main Deviation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dados da ordem de compra</fullName>
            </value>
            <value>
                <fullName>Dados de projeto</fullName>
            </value>
            <value>
                <fullName>Defeito</fullName>
            </value>
            <value>
                <fullName>Documentação</fullName>
            </value>
            <value>
                <fullName>Fora de especificação</fullName>
            </value>
            <value>
                <fullName>Nenhum</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Preservação</fullName>
            </value>
            <value>
                <fullName>Quantitativo</fullName>
            </value>
            <value>
                <fullName>Rastreabilidade</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>