force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Material_Category__c.field-meta.xml
<CustomField>
    <fullName>TW1_Material_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Category</label>
    <referenceTo>TW1_Category__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>