force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Material_Equipment__c.field-meta.xml
<CustomField>
    <fullName>TW1_Material_Equipment__c</fullName>
    <label>Material / Equipment</label>
    <length>22</length>
    <type>Text</type>
</CustomField>