force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Material_Spec__c.field-meta.xml
<CustomField>
    <fullName>TW1_Material_Spec__c</fullName>
    <label>Material Spec.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>