force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Meeting_Subject__c.field-meta.xml
<CustomField>
    <fullName>TW1_Meeting_Subject__c</fullName>
    <label>Meeting Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>