force-app/main/default/objects/TW1_Interaction__c/fields/TW1_MIMS_Number_Investigation__c.field-meta.xml
<CustomField>
    <fullName>TW1_MIMS_Number_Investigation__c</fullName>
    <label>MIMS Number Investigation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>