force-app/main/default/objects/TW1_Interaction__c/fields/TW1_NCs_quantity__c.field-meta.xml
<CustomField>
    <fullName>TW1_NCs_quantity__c</fullName>
    <label>NCs quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>