force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>TW1_Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality Deviation</fullName>
            </value>
            <value>
                <fullName>Labor Documentation</fullName>
            </value>
            <value>
                <fullName>HSE Deviation</fullName>
            </value>
            <value>
                <fullName>Compliance Deviation</fullName>
            </value>
            <value>
                <fullName>Subcontracting</fullName>
            </value>
            <value>
                <fullName>Contractual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>