force-app/main/default/objects/TW1_Interaction__c/fields/TW1_NQA__c.field-meta.xml
<CustomField>
    <fullName>TW1_NQA__c</fullName>
    <label>NQA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>