force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Observation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Observation__c</fullName>
    <label>Observation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>