force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Occupation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Occupation__c</fullName>
    <label>Occupation</label>
    <length>22</length>
    <type>Text</type>
</CustomField>