force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Ontime__c.field-meta.xml
<CustomField>
    <fullName>TW1_Ontime__c</fullName>
    <formula>IF(ISBLANK(TW1_Issue_Date__c),&quot;No&quot;, IF( TW1_Contract_Date__c &lt;=  TW1_Issue_Date__c , &quot;Yes&quot;,&quot;No&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ontime</label>
    <type>Text</type>
</CustomField>