force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Other_Techniques__c.field-meta.xml
<CustomField>
    <fullName>TW1_Other_Techniques__c</fullName>
    <label>Other Techniques</label>
    <length>255</length>
    <type>Text</type>
</CustomField>