force-app/main/default/objects/TW1_Interaction__c/fields/TW1_PMI__c.field-meta.xml
<CustomField>
    <fullName>TW1_PMI__c</fullName>
    <label>PMI</label>
    <length>22</length>
    <type>Text</type>
</CustomField>