force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Project_Number__c</fullName>
    <label>Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>