force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Purchase_Orde_Value__c.field-meta.xml
<CustomField>
    <fullName>TW1_Purchase_Orde_Value__c</fullName>
    <label>Purchase Orde Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>