force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>TW1_Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <length>24</length>
    <type>Text</type>
</CustomField>