force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TW1_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>