force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Reason_of_Rejection__c.field-meta.xml
<CustomField>
    <fullName>TW1_Reason_of_Rejection__c</fullName>
    <label>Reason of Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor Divergente</fullName>
            </value>
            <value>
                <fullName>CNPJ Divergente</fullName>
            </value>
            <value>
                <fullName>Quantidade Divergente</fullName>
            </value>
            <value>
                <fullName>Sem Ficha de Emergencia e/ou FISPQ</fullName>
            </value>
            <value>
                <fullName>Material Avariado</fullName>
            </value>
            <value>
                <fullName>Falta de Certificado</fullName>
            </value>
            <value>
                <fullName>Sem Saldo na PO</fullName>
            </value>
            <value>
                <fullName>Material mal-acondicionado na caixa</fullName>
            </value>
            <value>
                <fullName>PO pendente de aprovação</fullName>
            </value>
            <value>
                <fullName>NF Fora do Prazo de Circulação</fullName>
            </value>
            <value>
                <fullName>NF Recusada pelo Fiscal</fullName>
            </value>
            <value>
                <fullName>Material sem estar paletizado</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Documentação - Sem cópia da PO</fullName>
            </value>
            <value>
                <fullName>Documentação - Sem duas vias da nota</fullName>
            </value>
            <value>
                <fullName>Documentação - Sem PO na nota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>