force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Received_by__c.field-meta.xml
<CustomField>
    <fullName>TW1_Received_by__c</fullName>
    <label>Received by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>