force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Reference__c.field-meta.xml
<CustomField>
    <fullName>TW1_Reference__c</fullName>
    <label>Reference</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>