force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Reference_Norm__c.field-meta.xml
<CustomField>
    <fullName>TW1_Reference_Norm__c</fullName>
    <label>Reference Norm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>