force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Reference_Standard__c.field-meta.xml
<CustomField>
    <fullName>TW1_Reference_Standard__c</fullName>
    <label>Reference Standard</label>
    <length>22</length>
    <type>Text</type>
</CustomField>