force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Rejection_Limit__c.field-meta.xml
<CustomField>
    <fullName>TW1_Rejection_Limit__c</fullName>
    <label>Rejection Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>