force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Reprogrammed_date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Reprogrammed_date__c</fullName>
    <label>Reprogrammed Date</label>
    <type>Date</type>
</CustomField>