force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Responsable_Engineer__c.field-meta.xml
<CustomField>
    <fullName>TW1_Responsable_Engineer__c</fullName>
    <label>Responsable Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>