force-app/main/default/objects/TW1_Interaction__c/fields/TW1_RFA_N__c.field-meta.xml
<CustomField>
    <fullName>TW1_RFA_N__c</fullName>
    <displayFormat>RFA-{000000}</displayFormat>
    <label>RFA Nº</label>
    <type>AutoNumber</type>
</CustomField>