force-app/main/default/objects/TW1_Interaction__c/fields/TW1_RIR_N__c.field-meta.xml
<CustomField>
    <fullName>TW1_RIR_N__c</fullName>
    <displayFormat>RIR-{000000}</displayFormat>
    <label>RIR Nº</label>
    <type>AutoNumber</type>
</CustomField>