force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Sample_Size__c.field-meta.xml
<CustomField>
    <fullName>TW1_Sample_Size__c</fullName>
    <label>Sample Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>