force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Serial_N__c.field-meta.xml
<CustomField>
    <fullName>TW1_Serial_N__c</fullName>
    <label>Serial Nº</label>
    <length>255</length>
    <type>Text</type>
</CustomField>