force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Shipping_Evidence__c.field-meta.xml
<CustomField>
    <fullName>TW1_Shipping_Evidence__c</fullName>
    <label>Shipping Evidence</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>