force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Solucionado__c.field-meta.xml
<CustomField>
    <fullName>TW1_Solucionado__c</fullName>
    <label>Solucionado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>