force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Status__c</fullName>
    <defaultValue>&quot;Open&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Validation By the Legal</fullName>
            </value>
            <value>
                <fullName>Validated Notification</fullName>
            </value>
            <value>
                <fullName>Awaiting Return</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>New Proposed Date</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved under restriction</fullName>
            </value>
            <value>
                <fullName>New incident treatment</fullName>
            </value>
            <value>
                <fullName>Sent incident to supplier</fullName>
            </value>
            <value>
                <fullName>Incident responded</fullName>
            </value>
            <value>
                <fullName>Awaiting evidence of treatment</fullName>
            </value>
            <value>
                <fullName>Evidence sent</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Incident treatment rejected</fullName>
            </value>
            <value>
                <fullName>Incident treatment approved</fullName>
            </value>
            <value>
                <fullName>Clarification Required</fullName>
            </value>
            <value>
                <fullName>Analyzing Audit Info</fullName>
            </value>
            <value>
                <fullName>Audit Scheduled</fullName>
            </value>
            <value>
                <fullName>Awaiting Action Plan</fullName>
            </value>
            <value>
                <fullName>Action Plan Evaluation</fullName>
            </value>
            <value>
                <fullName>Action Plan Validation</fullName>
            </value>
            <value>
                <fullName>Awaiting Evidences</fullName>
            </value>
            <value>
                <fullName>Evidences Sent</fullName>
            </value>
            <value>
                <fullName>Evidences Analyzed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>