force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Subject_contact_us__c.field-meta.xml
<CustomField>
    <fullName>TW1_Subject_contact_us__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>