force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Supervisor_CREA__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supervisor_CREA__c</fullName>
    <label>Supervisor CREA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>