force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supervisor_Name__c</fullName>
    <label>Supervisor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>