force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Supplier__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>