force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Tare_Weight__c.field-meta.xml
<CustomField>
    <fullName>TW1_Tare_Weight__c</fullName>
    <label>Tare Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>