force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Time__c.field-meta.xml
<CustomField>
    <fullName>TW1_Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>