force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Total_Delivery__c.field-meta.xml
<CustomField>
    <fullName>TW1_Total_Delivery__c</fullName>
    <label>Total Delivery</label>
    <length>150</length>
    <type>Text</type>
</CustomField>