force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Total_Request__c.field-meta.xml
<CustomField>
    <fullName>TW1_Total_Request__c</fullName>
    <label>Total Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>