force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>TW1_Total_Value__c</fullName>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>