force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Tratativa__c.field-meta.xml
<CustomField>
    <fullName>TW1_Tratativa__c</fullName>
    <label>Remedial Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>