force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Type_of_equipment__c.field-meta.xml
<CustomField>
    <fullName>TW1_Type_of_equipment__c</fullName>
    <label>Type of equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caixa</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>