force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Type_of_Inspection__c.field-meta.xml
<CustomField>
    <fullName>TW1_Type_of_Inspection__c</fullName>
    <label>Type of Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materiais</fullName>
            </value>
            <value>
                <fullName>Teste Hidrostático</fullName>
            </value>
            <value>
                <fullName>Entrega Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>