force-app/main/default/objects/TW1_Interaction__c/fields/TW1_UTM__c.field-meta.xml
<CustomField>
    <fullName>TW1_UTM__c</fullName>
    <label>UTM</label>
    <length>22</length>
    <type>Text</type>
</CustomField>