force-app/main/default/objects/TW1_Interaction__c/fields/TW3_From_Portal__c.field-meta.xml
<CustomField>
    <fullName>TW3_From_Portal__c</fullName>
    <label>From Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Senegal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>