force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Action_Plan_Validation_Approver__c.field-meta.xml
<CustomField>
    <fullName>TW4_Action_Plan_Validation_Approver__c</fullName>
    <label>Action Plan Validation - Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>