force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Action_Plan_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>TW4_Action_Plan_Validation_Status__c</fullName>
    <label>Action Plan Validation - Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>