force-app/main/default/objects/TW1_Interaction__c/fields/TW4_All_Evidence_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>TW4_All_Evidence_Analyzed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Evidence Analyzed</label>
    <type>Checkbox</type>
</CustomField>