force-app/main/default/objects/TW1_Interaction__c/fields/TW4_All_Evidences_Sent_Conclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>TW4_All_Evidences_Sent_Conclusion_Date__c</fullName>
    <label>All Evidences Sent - Conclusion Date</label>
    <type>DateTime</type>
</CustomField>