force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Appraisal__c</fullName>
    <label>Audit Appraisal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved without Nonconformities</fullName>
            </value>
            <value>
                <fullName>Approved with Nonconformities</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>