force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Conclusion__c</fullName>
    <inlineHelpText>Strengths/Improvements</inlineHelpText>
    <label>Audit Conclusion</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>