force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Confirmation_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Confirmation_Acceptance__c</fullName>
    <label>Audit Confirmation - Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>