force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Confirmation_Comments__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Confirmation_Comments__c</fullName>
    <label>Audit Confirmation - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>