force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Confirmation_Date_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Confirmation_Date_End_Date__c</fullName>
    <label>Audit Confirmation Date - End Date</label>
    <type>DateTime</type>
</CustomField>