force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Date__c</fullName>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>