force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Objective__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Objective__c</fullName>
    <label>Audit Objective</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>